[gd_scene load_steps=15 format=2]

[ext_resource path="res://Slime.png" type="Texture" id=1]
[ext_resource path="res://Scenes/Npcs/EnemyAI.gd" type="Script" id=2]
[ext_resource path="res://ArtWork/Sprites/Player/LightMask.png" type="Texture" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 14, 10 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 11, 8.5 )

[sub_resource type="Animation" id=3]
resource_name = "Attack"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 8, 9, 10, 11, 12 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.4 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "_initialize_patrol"
} ]
}

[sub_resource type="Animation" id=7]
resource_name = "Death"
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 17, 18, 19, 20, 21 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "_blood_effect"
}, {
"args": [  ],
"method": "destroy"
} ]
}

[sub_resource type="Animation" id=8]
resource_name = "Hit"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 13, 14, 15, 16 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.4 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "_initialize_patrol"
} ]
}

[sub_resource type="Animation" id=4]
resource_name = "Idle"
length = 0.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 3, 1, 2, 3 ]
}

[sub_resource type="Animation" id=5]
resource_name = "Patrol"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 4, 5, 6, 7 ]
}

[sub_resource type="Animation" id=6]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="RectangleShape2D" id=10]
extents = Vector2( 18, 3.5 )

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 18, 10 )

[sub_resource type="RectangleShape2D" id=11]
extents = Vector2( 10, 0.5 )

[node name="Enemy" type="KinematicBody2D" groups=["Enemy"]]
collision_layer = 4
collision_mask = 11
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -12.515 )
texture = ExtResource( 1 )
hframes = 8
vframes = 3
region_enabled = true
region_rect = Rect2( 0, -1, 256, 75 )

[node name="HitBox" type="Area2D" parent="." groups=["Enemy"]]
collision_mask = 9

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
modulate = Color( 0.196078, 1, 0, 1 )
position = Vector2( 0, -10 )
shape = SubResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 1, -8.54 )
shape = SubResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Attack = SubResource( 3 )
anims/Death = SubResource( 7 )
anims/Hit = SubResource( 8 )
anims/Idle = SubResource( 4 )
anims/Patrol = SubResource( 5 )
anims/RESET = SubResource( 6 )

[node name="PatrolTimer" type="Timer" parent="."]
wait_time = 5.0

[node name="Rotate" type="Node2D" parent="."]

[node name="HurtBox" type="Area2D" parent="Rotate"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Rotate/HurtBox"]
modulate = Color( 0.709804, 0, 1, 1 )
position = Vector2( -18, -10 )
shape = SubResource( 10 )

[node name="PlayerDetect" type="Area2D" parent="Rotate"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Rotate/PlayerDetect"]
modulate = Color( 0.286275, 0.254902, 0.8, 1 )
position = Vector2( -18, -10 )
shape = SubResource( 9 )

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( 0, -10 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="."]
position = Vector2( 1, -0.5 )
shape = SubResource( 11 )

[node name="Light2D" type="Light2D" parent="."]
position = Vector2( 0, -9 )
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 3 )
color = Color( 0.835294, 0.196078, 0.196078, 1 )

[connection signal="area_entered" from="HitBox" to="." method="_on_HitBox_area_entered"]
[connection signal="body_entered" from="HitBox" to="." method="_on_HitBox_body_entered"]
[connection signal="timeout" from="PatrolTimer" to="." method="_on_PatrolTimer_timeout"]
[connection signal="body_entered" from="Rotate/PlayerDetect" to="." method="_on_PlayerDetect_body_entered"]
[connection signal="body_exited" from="Rotate/PlayerDetect" to="." method="_on_PlayerDetect_body_exited"]
